--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libhamcrest-java (1.3-5ubuntu1~precise0+exo1) precise; urgency=medium
+
+  * Backport for Precise.
+
+ -- Vincent Bernat <bernat@debian.org>  Wed, 25 Oct 2017 21:07:48 +0200
+
 libhamcrest-java (1.3-5ubuntu1) utopic; urgency=medium
 
   * Drop integration component, removing dependency on easymock and
